# immich-desktop

./: .gitignore  LICENSE  README.md  config.example.json  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: build-check.mjs  preflight-build.mjs
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  shell.json
src-tauri/src/: cli.rs  commands.rs  config.rs  connection.rs  credentials.rs  discovery.rs  lib.rs  main.rs  process_manager.rs  retry_queue.rs  sync_triggers.rs  watch.rs
src/components/: Dashboard.tsx  SettingsPanel.tsx  SetupWizard.tsx
