[package]
name = "immich-desktop"
version = "0.1.0"
description = "Windows GUI wrapper for the Immich CLI"
authors = ["Immich Desktop Contributors"]
edition = "2021"

[lib]
name = "immich_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
keyring = { version = "3", features = ["windows-native"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "8"
regex = "1"
directories = "5"
anyhow = "1"
thiserror = "2"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
open = "5"
tauri-plugin-dialog = "2"
